public static class AnimatorsParameters
{
    public static readonly string fireTrigger = "Fire_trigger";

    public static readonly string hitTrigger = "Hit_trigger";

    public static readonly string deadBool = "Dead_b";

    public static readonly string throwSpeedFloat = "ThrowSpeed_f";

    public static readonly string meleeSpeedFloat = "MeleeSpeed_f";

    public static readonly string ThrowBool = "Throw_b";
}
